UsersMS-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-ms
  namespace: cicd-demo
spec:
  selector:
    matchLabels:
      app: users-ms
  template:
    metadata:
      labels:
        app: users-ms
    spec:
      revisionHistoryLimit: 1
      containers:
      - name: users-ms
        image: harbor.abcdavid.top/cicd_demo/usersms:0.0.18
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
