API-Gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: e-catalogue
spec:
  selector:
    matchLabels:
      app: api-gateway
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: harbor.abcdavid.top/e_catalogue/gateway:0.0.77
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: e-catalogue
spec:
  selector:
    app: api-gateway
  ports:
  - port: 3000
    targetPort: 3000
