FileServer.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileserver
  namespace: e-catalogue
spec:
  ports:
  - port: 3300
  selector:
    app: fileserver
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileserver
  namespace: e-catalogue
spec:
  selector:
    matchLabels:
      app: fileserver
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fileserver
    spec:
      containers:
      - image: harbor.abcdavid.top/e_catalogue/fileserver:0.0.125
        name: fileserver
        ports:
        - containerPort: 3300
          name: fileserver
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        volumeMounts:
        - name: fileserver-persistent-storage
          mountPath: /app/files
      securityContext:
        fsGroup: 1001
      volumes:
      - name: fileserver-persistent-storage
        persistentVolumeClaim:
          claimName: fileserver-pv-claim
