Gateway-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: e-catalogue
spec:
  selector:
    app: api-gateway
  ports:
  - port: 3000
    targetPort: 3000
