ProductDB.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-db
  namespace: e-catalogue
spec:
  ports:
  - port: 3306
  selector:
    app: product-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db
  namespace: e-catalogue
spec:
  selector:
    matchLabels:
      app: product-db
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
      - image: mysql:latest
        name: product-db
        ports:
        - containerPort: 3306
          name: product-db
        resources:
          limits:
            memory: "512Mi"
            cpu: "10m"
        volumeMounts:
        - name: product-db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: product-db-persistent-storage
        persistentVolumeClaim:
          claimName: product-db-pv-claim
