UserInfoMS.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userinfo-ms
  namespace: e-catalogue
spec:
  selector:
    matchLabels:
      app: userinfo-ms
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: userinfo-ms
    spec:
      containers:
      - name: userinfo-ms
        image: harbor.abcdavid.top/e_catalogue/userinfoms:0.0.123
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: userinfo-ms
  namespace: e-catalogue
spec:
  selector:
    app: userinfo-ms
  ports:
  - port: 3000
    targetPort: 3000
