UsersDB.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-db
  namespace: e-catalogue
spec:
  ports:
  - port: 3306
  selector:
    app: users-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
  namespace: e-catalogue
spec:
  selector:
    matchLabels:
      app: users-db
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
      - image: mysql:latest
        name: users-db
        ports:
        - containerPort: 3306
          name: users-db
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: users-db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: users-db-persistent-storage
        persistentVolumeClaim:
          claimName: users-db-pv-claim
