UsersMS-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-ms
  namespace: e-catalogue
spec:
  selector:
    app: users-ms
  ports:
  - port: 3000
    targetPort: 3000
